--- a/tswnavbar.css
+++ b/tswnavbar.css
@@ -6,7 +6,7 @@
 */
 
 #tswcssbuttons {
-	width: 180px ;
+	width: 225px ;
 	max-width: 100% ;
 	text-align: center ;
 }
@@ -23,13 +23,13 @@
 	font-family: Arial, Helvetica, sans-serif ;
 }
 #tswcssbuttons li a {
-	color: #000000 ;
-	background-color: #99ccff ;
-	border: 1px outset #0000ff ;
+	color: #ffff00 ;
+	background-color: #12127d ;
+	border: 1px outset #9191ff ;
 	text-decoration: none ;
 	display: block ;
 }
 #tswcssbuttons li a:hover {
-	color: #11ff00 ;
-	background-color: #0000c0 ;
+	color: #000000 ;
+	background-color: #c8c8ff ;
 }
