--- a/tswnavbar.css
+++ b/tswnavbar.css
@@ -11,12 +11,12 @@
 	text-align: center ;
 }
 #tswcssbuttons ul {
-	margin: 4 ;
+	margin: 5% 0 ;
 	padding: 0 ;
 	list-style: none ;
 }
 #tswcssbuttons li {
-	margin: 4 ;
+	margin: 0 ;
 	padding: 0 ;
 	display: block ;
 	list-style: none ;
