--- a/tswnavbar.css
+++ b/tswnavbar.css
@@ -11,13 +11,13 @@
 	text-align: center ;
 }
 #tswcssbuttons ul {
-	margin: 5% 0 ;
-	padding: 0 ;
+	margin:  0 ;
+	padding: 10px ;
 	list-style: none ;
 }
 #tswcssbuttons li {
 	margin: 0 ;
-	padding: 0 ;
+	padding: 10px ;
 	display: block ;
 	list-style: none ;
 	font-family: Arial, Helvetica, sans-serif ;
