--- a/tswnavbar.css
+++ b/tswnavbar.css
@@ -17,7 +17,7 @@
 }
 #tswcssbuttons li {
 	margin: 0 ;
-	padding: 5% 0 ;
+	padding: 50px 0 ;
 	display: block ;
 	list-style: none ;
 	font-family: Arial, Helvetica, sans-serif ;
