--- a/tswnavbar.css
+++ b/tswnavbar.css
@@ -17,7 +17,7 @@
 }
 #tswcssbuttons li {
 	margin: 0 ;
-	padding: 50px 0 ;
+	padding:  0 ;
 	display: block ;
 	list-style: none ;
 	font-family: Arial, Helvetica, sans-serif ;
@@ -25,7 +25,7 @@
 #tswcssbuttons li a {
 	color: #ffff00 ;
 	background-color: #12127d ;
-	border: 1px outset #9191ff ;
+	border: 30px outset #9191ff ;
 	text-decoration: none ;
 	display: block ;
 }
