--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 */
 body {
 	font-family: Arial, Helvetica, sans-serif ;
-	background-color: aqua;
+	background-color: none;
 }
 img {
 	max-width: 100% ;
@@ -21,13 +21,13 @@ div#tswsidecol {
 	float: right ;
 	width: 20% ;
 	color: #000 ;
-	background-color:aqua ;
+	background-color:none ;
 }
 div#tswcontent {
 	float: right ;
 	width: 80% ;
 	color: #fff;;
-	background-color:blue ;
+	background-color:none ;
 }
 @media only screen and (max-width: 629px) {
 	div#tswsidecol {
@@ -45,7 +45,7 @@ div#tswcontproper {
 }
 div#tswcontainer {
 	color: inherit ;
-	background-color:aqua ;
+	background-color: none;
 }
 div#tswsideproper, div#tswothersideproper {
 	padding-left: 5px ;
@@ -53,9 +53,9 @@ div#tswsideproper, div#tswothersideproper {
 }
 div#tswheader {
 	color: #000 ;
-	background-color:aqua;
+	background-color:none;
 }
 div#tswfooter {
-	color: #000 ;
-	background-color:aqua ;
+	color: rgb(255, 255, 255) ;
+	background-color:none ;
 }
