--- a/dicebahia.css
+++ b/dicebahia.css
@@ -8,7 +8,7 @@ h1 {
     position: absolute;
     width: 30px; 
     height: 30px;
-    background: orange;
+    background: yellow;
     border-radius: 20px;
 }
 
