--- a/dicebahia.css
+++ b/dicebahia.css
@@ -187,7 +187,7 @@ h1 {
     height: 200px;
     position: relative;
     margin: 0 auto 40px;
-    border: 1px solid #fff;
+    border: 1px;
 
     perspective: 1000px;
     perspective-origin: 50% 100%;
